create container components; add prettier to server
